| Bug #55838 | Memory leak in ndb_mgm> LOG BLOCK=block_name | ||
|---|---|---|---|
| Submitted: | 9 Aug 2010 14:05 | Modified: | 30 Nov 2010 14:53 |
| Reporter: | Magnus Blåudd | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.0 | OS: | Any |
| Assigned to: | Magnus Blåudd | CPU Architecture: | Any |
| Tags: | 7.0.17 | ||
[9 Aug 2010 14:05]
Magnus Blåudd
[17 Aug 2010 11:57]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/115935
[23 Sep 2010 9:52]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.47-ndb-7.0.19 (revid:magnus.blaudd@sun.com-20100923093619-c0b9mvyffucp9nhi) (version source revid:magnus.blaudd@sun.com-20100923093619-c0b9mvyffucp9nhi) (merge vers: 5.1.47-ndb-7.0.19) (pib:21)
[30 Nov 2010 14:53]
Jon Stephens
Since this command is available in debug builds only, no changelog entry is required. (We should probably document the debug-only stuff in the NDB Internals doc, but that's a separate issue, at least for now.) Closed.
