Bug#55838 Memory leak in ndb_mgm> "LOG BLOCK=<block_name>"  - A vector of strdup'ed memory was returned from function    and never freed by caller  - Rewrite to use Vector<BaseString> to get automatic free.